<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sign_up_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:text="@string/sign_up"/>
        <EditText
            android:layout_width="260dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/username"
            android:hint="@string/username"/>
        <EditText
            android:layout_width="260dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/email"
            android:hint="@string/email"/>

        <EditText
            android:layout_width="260dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/password"
            android:hint="@string/password"/>
        <EditText
            android:layout_width="260dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/confirm_password"
            android:hint="@string/confirm_password"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sign_in_button"
                android:text="@string/sign_in"
                android:layout_gravity="center_horizontal"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sign_up_button"
                android:text="@string/sign_up"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>

        <com.google.android.gms.common.SignInButton
            android:id="@+id/google_sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="visible"
            android:layout_marginTop="50dp"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>




</FrameLayout>